--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
 
+    .nav__link {
+        @apply relative text-base font-medium w-fit block text-white after:block after:content-[''] after:absolute after:h-[3px] after:bg-green-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-right;
+      }
+      
+
+      .text-bg{
+        background-image: linear-gradient(to right, #8750f7 0% , #ffff 100% );
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+}
